--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -12,7 +12,7 @@
                 </video>
 
                 <div class="feed-collection__advanced-info">
-                    <a href="/movies/{{this.id}}" style="margin-left: 1rem;" spa-link>
+                    <a href="/movies/{{this.id}}" class="feed-collection__advanced-info__link" spa-link>
                         <div class="feed-collection__advanced-info__name">{{this.name}}</div>
                     </a>
                     <div class="feed-collection__advanced-info__rating" data-rating="{{this.rating}}">{{this.rating}}
