--- a/src/pages/main/components/main-background.hbs
+++ b/src/pages/main/components/main-background.hbs
@@ -3,19 +3,17 @@
 
         <div class="main-form">
             <div>
-                <h1>Смех. Слезы. Острые ощущения. Найдите все это на
-                    Netflix.</h1>
+                <h1 class="main-form__title">Смех. Слезы. Острые ощущения. Найдите все это на Netflix.</h1>
+
             </div>
             <div>
-                <p class="main-form__description">Стоимость бесконечных
-                    развлечений
-                    начинается всего с 5,99 евро. Отменить
-                    в любое время.</p>
+                <p class="main-form__description main-form__title">
+                    Стоимость бесконечных развлечений начинается всего с 5,99 евро. Отменить в любое время.</p>
             </div>
             <div class="main-form__email-form">
                 <div class="main-form__email-form__container">
                     <form name="mainForm">
-                        <h3 style="font-weight: 100; font-size: 16px;">Готовы
+                        <h3 class="main-form__title">Готовы
                             смотреть? Введите свой адрес электронной
                             почты, чтобы создать или перезапустить
                             подписку.</h3>
