--- a/src/pages/register/components/register-form.hbs
+++ b/src/pages/register/components/register-form.hbs
@@ -1,4 +1,4 @@
-
+<div class="login-page__login-background" style="background-image: url('/img/main.jpg');"></div>
 <form name="createPassword" method="post" class="register-form">
 
     <h1 class="register-form__title">
