--- a/src/pages/register/components/start-register-form.hbs
+++ b/src/pages/register/components/start-register-form.hbs
@@ -1,3 +1,4 @@
+<div class="login-page__login-background" style="background-image: url('/img/main.jpg');"></div>
 <div>
     <div class="start-register__form">
         <div class="start-register__form-logo-container">
