--- a/src/pages/register/main-register.hbs
+++ b/src/pages/register/main-register.hbs
@@ -1,5 +1,5 @@
-{{> partial/header/partial-header regPage=true}}
+{{> partial/header/partial-header kind="main-page" mainPage=true}}
 
 {{> components/register-form }}
 
-{{> partial/footer/partial-footer kind="reg-page-main"}}
+{{> partial/footer/partial-footer}}
