--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -1,7 +1,5 @@
 .header-content {
     position: relative;
-    padding-top: 1.5rem;
-    padding-bottom: 0;
     z-index: 1;
     transition: max-width 0.5s, min-width 0.5s, padding 0.5s;
 }
@@ -16,56 +14,42 @@
     margin: 0;
 }
 
-.header-content__row{
+.header-content__row {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;
+    padding: 2rem;
     align-items: center;
 }
-.header-content__links{
+
+.header-content__links {
     display: flex;
     flex-direction: row;
     gap: 20px;
     padding-left: 30px;
 }
 
-.header-content__links a{
+.header-content__links a {
     color: #fff;
     text-decoration: none;
 }
 
-.header-content__column{
+.header-content__column {
     display: flex;
     flex-direction: column;
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (max-width: 900px) {
+    .header-content__row {
+        flex-direction: column;
+    }
+
     .header-content {
-        max-width: calc(66.66666666666666% - 6rem);
+        padding: 0;
     }
 }
 
-@media screen and (min-width: 1280px) {
-    .header-content {
-        max-width: calc(100% - 4rem);
-    }
-}
-
-@media screen and (min-width: 960px) {
-    .header-content {
-        max-width: calc(100% - 4rem);
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-}
-
-@media screen and (max-width: 959px) {
-    .header-content {
-        max-width: calc(100% - 4rem);
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
-}
 
 .feed-header-menu>a {
     font-family: Netflix;
