--- a/src/pages/login/components/login-background.css
+++ b/src/pages/login/components/login-background.css
@@ -1,14 +1,16 @@
 .login-page__login-background {
-    height: 100%;
     display: flex;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    transform: scale(1.25) translateY(-10%);
+    width: 100%;
+    min-height: 700px;
+    transform: scale(1.25) translateY(-42px);
     opacity: 0.5;
     background-image: url(../../../static/img/main.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
+    z-index: -1;
 }
