--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -9,6 +9,7 @@
 
 .login-page__container {
     width: 100vw;
+    height: 100vh;
     position: absolute;
     flex-direction: column;
     display: flex;
