--- a/src/pages/main/components/main-background.css
+++ b/src/pages/main/components/main-background.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     transform: scale(1.25) translateY(-10%);
     background-image: url(../../../static/img/main.jpg);
     background-size: cover;
@@ -22,4 +22,12 @@
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.8) 100%);
+}
+
+
+@media screen and (max-width: 900px) {
+    .main-form {
+        transform: scale(.7);
+        text-align: center;
+    }
 }
