--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -1,26 +1,35 @@
 <form name="profile-form" class="profile-form">
-    <div>
-        <b><h3>Редактировать профиль</h1></b>
-    </div>
-    <div>
-        <label for="email">Почта</label>
-        {{> partial/input-control/input-control kind="register-page" id="email"
-        default=true
-        placeholder="Почта"
-        autocomplete="email"
-        name="email" type="email"}}
-    </div>
-    <div>
-        <label for="password">Пароль</label>
-        {{> partial/input-control/input-control kind="register-page"
-        id="password" default=true
-        placeholder="Пароль"
-        autocomplete="password"
-        name="password" type="password"}}
+    <div class="profile-form__row">
+        <div class="profile-form__row__avatar">
+            <img class="avatar-preview" data-avatar="" src="/img/camera_50.png">
+            {{> partial/input-control/input-control kind="register-page" file=true id="file"
+            name="file" placeholder="Загрузите аватар" type="file"}}
+        </div>
+        <div class="profile-form__row__form">
+            <div>
+                <b>
+                    <h3>Редактировать профиль</h1>
+                </b>
+            </div>
+            <div class="profile-form__row__form_col">
+                <label for="email">Почта</label>
+                {{> partial/input-control/input-control kind="register-page" id="email"
+                default=true
+                placeholder="Почта"
+                autocomplete="email"
+                name="email" type="email"}}
+            </div>
+            <div class="profile-form__row__form_col">
+                <label for="password">Пароль</label>
+                {{> partial/input-control/input-control kind="register-page"
+                id="password" default=true
+                placeholder="Пароль"
+                autocomplete="password"
+                name="password" type="password"}}
+            </div>
+
+            {{> partial/button/button type="submit" kind="login" label="Применить" id="submit"}}
+        </div>
     </div>
 
-    {{> partial/input-control/input-control kind="register-page" file=true id="file"
-    name="file" placeholder="Загрузите аватар" type="file"}}
-
-    {{> partial/button/button type="submit" kind="login" label="Применить" id="submit"}}
 </form>
