--- a/src/pages/register/components/register-form.css
+++ b/src/pages/register/components/register-form.css
@@ -1,13 +1,15 @@
 .register-form {
-    max-width: 440px;
-    margin-left: calc((-500px + 100%)/2);
-    margin-top: 25px;
-    color: #333333;
-    font-size: 16px;
+    background: rgba(0, 0, 0, .75);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
     font-family: Netflix;
-    margin-bottom: 30px;
+    font-size: 16px;
+    gap: 10px;
     letter-spacing: 0;
-    padding: 20px 32px 60px;
+    margin: auto;
+    max-width: 440px;
+    padding: 3rem;
 }
 
 .register-form label {
