--- a/src/pages/register/components/start-register-form.css
+++ b/src/pages/register/components/start-register-form.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #333333;
+    color: #fff;
     font-size: 16px;
     max-width: 340px;
-    margin-left: calc((-400px + 100%)/2);
-    margin-bottom: 30px;
+    margin: auto;
     letter-spacing: 0;
-    padding: 20px 32px 60px;
+    background: rgba(0, 0, 0, .75);
+    padding: 3rem;
 }
 
 .start-register__form-logo-container {
