--- a/src/pages/register/start-register.hbs
+++ b/src/pages/register/start-register.hbs
@@ -1,5 +1,5 @@
-{{> partial/header/partial-header regPage=true}}
+  {{> partial/header/partial-header kind="main-page" mainPage=true}}
 
 {{> components/start-register-form }}
 
-{{> partial/footer/partial-footer kind="reg-page"}}
+{{> partial/footer/partial-footer}}
