--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -9,6 +9,7 @@
         {{#if feedPage}}
         <div class="header-content__links">
             <a href="/" spa-link>Начало</a>
+            <a href="/admin" spa-link>Статистика</a>
             <a href="#serials" disable="true">Сериалы</a>
             <a href="#films" disable="true">Фильмы</a>
             <a href="#list" disable="true">Избранное</a>
