--- a/src/pages/login/components/login-form.css
+++ b/src/pages/login/components/login-form.css
@@ -8,6 +8,7 @@
     color: #333;
     background: rgba(0, 0, 0, .75);
     max-width: 450px;
+    height: 536px;
     border-radius: 4px;
     margin: auto;
     margin-bottom: 5rem;
