--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -13,35 +13,32 @@
 }
 
 .feed-collection__title {
+    text-decoration: none;
+    font-size: 2rem;
     color: white;
     margin-left: 2rem;
+    transition: all .3s;
 }
 
 .feed-collection__container {
     width: 100%;
     display: flex;
-    overflow-x: auto;
-    overflow-y: hidden;
     padding-bottom: 60px;
     padding-top: 30px;
-    gap: 20px;
+    gap: 10px;
     padding-left: 20px;
     transition: transform .3s linear;
 }
 
 .feed-collection__container-card {
-    min-height: 350px;
     transition: all .3s linear;
 }
 
 .feed-collection__container-card__video {
-    padding-left: 20px;
-    padding-right: 20px
+    object-fit: none;
 }
 
 .feed-collection__container-card:hover {
-    margin-left: 16px;
-    margin-right: 16px;
     transform: scale(1.1);
     transform-origin: center center;
     transition: all .3s linear;
@@ -72,14 +69,14 @@
     height: 40px;
     width: -webkit-fill-available;
     padding: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
     position: absolute;
     margin-top: -50px;
     opacity: 0;
 }
 
-.feed-collection__container-card:hover div .feed-collection__advanced-info {
+.feed-collection__container-card:hover .feed-collection__advanced-info {
     opacity: 1;
     animation: show .3s;
 }
