--- a/src/pages/register/start-register.hbs
+++ b/src/pages/register/start-register.hbs
@@ -1,5 +1,10 @@
-  {{> partial/header/partial-header kind="main-page" mainPage=true}}
+<div class="main-register-page">
+  <div class="login-page__login-background" style="background-image: url('/img/main.jpg');"></div>
+  <div class="main-register-page__container">
+    {{> partial/header/partial-header kind="main-page" mainPage=true}}
 
-{{> components/start-register-form }}
+    {{> components/start-register-form }}
 
-{{> partial/footer/partial-footer}}
+    {{> partial/footer/partial-footer}}
+  </div>
+</div>
