--- a/src/pages/content/content.hbs
+++ b/src/pages/content/content.hbs
@@ -4,18 +4,15 @@
 <div class="content-container">
 
     <h1 class="content-container__title">{{film.film.name}}</h1>
-    <video controls
-        controlslist="nodownload noremoteplayback"
-        class="content-container__player">
-        <source
-            src="{{film.film.mediaPath}}"
-            type="video/mp4" />
+    <video controls controlslist="nodownload noremoteplayback" class="content-container__player">
+        <source src="{{film.film.mediaPath}}" type="video/mp4" />
     </video>
     <div class="content-container__player__actions">
         {{>partial/button/btn-action id="prev-button" kind="prev"}}
         {{>partial/button/btn-action id="next-button" kind="next"}}
     </div>
     <div class="content-container__advanced-info">
+        <div class="content__like">Добавить в избранное <button class="heart-button">&#x2665;</button></div>
         <div class="content-container__advanced-info__meta">
             <div class="content-container__advanced-info__meta-year"><b>Год
                     выхода:</b>
@@ -23,9 +20,11 @@
             <div class="content-container__advanced-info__meta-age"><b>Возрастное
                     ограничение:</b> {{film.film.ageRestriction}}+</div>
             <div class="content-container__advanced-info__meta-rating"><b>Рейтинг:</b>
-                <span id="rating"></span></div>
+                <span id="rating"></span>
+            </div>
             <div class="content-container__advanced-info__meta-time"><b>Длительность:</b>
-                <span id="duration"></span></div>
+                <span id="duration"></span>
+            </div>
         </div>
         <div class="content-container__advanced-info__about">
             <div class="content-container__advanced-info__description">
@@ -38,8 +37,8 @@
                 </div>
                 <div class="content-container__advanced-info__genres-list">
                     {{#each film.artists}}
-                    <a class="content-container__advanced-info__genres-link"
-                        href="/cast/{{this.id}}" spa-link>{{this.name}}
+                    <a class="content-container__advanced-info__genres-link" href="/cast/{{this.id}}"
+                        spa-link>{{this.name}}
                     </a>
                     {{/each}}
                 </div>
