--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -18,16 +18,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    /*width: 100%;*/
+    gap: 10px;
     padding: 2rem;
     align-items: center;
 }
 
 .header-content__links {
-    display: flex;
+        display: flex;
     flex-direction: row;
     gap: 20px;
     padding-left: 30px;
+    align-items: center;
 }
 
 .header-content__links a {
@@ -68,4 +70,71 @@
 .margin-a>a {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
+}
+
+
+
+
+
+
+.search-box {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+}
+
+.input-search {
+    width: 0px;
+    border-style: none;
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    outline: none;
+    border-radius: 25px;
+    transition: all .5s ease-in-out;
+    background-color: var(--primary);
+    padding-right: 40px;
+    color: #fff;
+}
+
+.input-search::placeholder {
+    color: rgba(255, 255, 255, .5);
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 100;
+}
+
+.btn-search {
+    background-color: transparent;
+    border-radius: 50%;
+    border-style: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    height: 100%;
+    outline: none;
+    pointer-events: painted;
+    position: absolute;
+    right: 0;
+    width: 50px;
+}
+
+.btn-search:focus~.input-search {
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+.input-search:focus {
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
