Страничка сериала готова

--- a/src/pages/like/like.hbs
+++ b/src/pages/like/like.hbs
@@ -1,6 +1,6 @@
 {{> partial/header/partial-header feedPage=true kind="feed-page"}}
 {{#if empty}}
-<div class="glow-title">Добавьте в избранное что-нибудь</div>
+<div class="glow-title" style="height: 100%; display: flex;">Добавьте в избранное что-нибудь</div>
 {{/if}}
 
 {{#if notEmpty}}
