--- a/src/pages/content/components/player.css
+++ b/src/pages/content/components/player.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     max-width: 70%;
+    width: 70%;
     margin: auto;
     margin-top: 2rem;
     margin-bottom: 2rem;
