--- a/src/pages/profile/components/profile-form.hbs
+++ b/src/pages/profile/components/profile-form.hbs
@@ -1,7 +1,7 @@
 <form name="profile-form" class="profile-form">
     <div class="profile-form__row">
         <div class="profile-form__row__avatar">
-            <img class="avatar-preview" data-avatar="" src="/img/camera_50.png">
+            <img class="avatar avatar-preview" data-avatar="" src="/img/camera_50.png">
             {{> partial/input-control/input-control kind="register-page" file=true id="file"
             name="file" placeholder="Загрузите аватар" type="file"}}
         </div>
