--- a/src/partial/button/button.css
+++ b/src/partial/button/button.css
@@ -130,6 +130,11 @@ button.partial-btn[kind="primary-xl"] {
     color: black;
 }
 
+.btn-action__disabled {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
 .btn-action[kind="play-card"] {
     background: white;
     color: black;
