--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -10,7 +10,7 @@
         <div class="header-content__links">
             <a href="/" spa-link>Начало</a>
             <a href="/admin" spa-link>Статистика</a>
-            <a href="#serials" disable="true">Сериалы</a>
+            <a href="/serials" spa-link>Сериалы</a>
             <a href="/list" spa-link>Избранное</a>
         </div>
         <div style="display: flex; flex-direction: column">
