добавил страничку актеров, пофиксил ошибки, иду умирвть

--- a/src/pages/serials/serials-feed/serials-content.hbs
+++ b/src/pages/serials/serials-feed/serials-content.hbs
@@ -39,7 +39,7 @@
                 </div>
                 <div class="content-container__advanced-info__genres-list">
                     {{#each artists}}
-                    <a class="content-container__advanced-info__genres-link" href="/cast/{{this.id}}"
+                    <a class="content-container__advanced-info__genres-link" href="/serial-cast/{{this.id}}"
                         spa-link>{{this.name}}
                     </a>
                     {{/each}}
