--- a/src/pages/serials/serials-feed/serials-feed-collections.hbs
+++ b/src/pages/serials/serials-feed/serials-feed-collections.hbs
@@ -1,5 +1,5 @@
 <div class="feed-collection__container-offset">
-    <a class="feed-collection__title" href="/genre/{{title}}" spa-link>{{title}}</a>
+    <a class="feed-collection__title" href="/serial-genre/{{id}}" spa-link>{{title}}</a>
 </div>
 <div class="feed-collection__carousel" id="{{carousel}}">
     <div class="feed-collection__container" id="{{container}}">
