--- a/src/pages/serials/serials-feed/serial-cast-item.hbs
+++ b/src/pages/serials/serials-feed/serial-cast-item.hbs
@@ -4,11 +4,10 @@
         <source src="{{this.previewVideoPath}}" type='video/mp4'>
     </video>
     <div class="feed-collection__advanced-info">
-        <a href="{{this.url}}" class="feed-collection__advanced-info__link" spa-link>
+        <a href="/serial/{{this.id}}" class="feed-collection__advanced-info__link" spa-link>
             <div class="feed-collection__advanced-info__name">{{this.name}}</div>
         </a>
         <div class="feed-collection__advanced-info__rating" data-rating="{{this.rating}}">{{this.rating}}
         </div>
-        <button class="heart-button" id="{{id}}">&#128148;</button>
     </div>
 </div>
