--- a/src/pages/serials/serials-feed/serials-content.hbs
+++ b/src/pages/serials/serials-feed/serials-content.hbs
@@ -9,7 +9,7 @@
             <source type="video/mp4" />
         </video>
     <div class="content-container__player__actions">
-        <div class="episodeLabel" id="prevEpisode"></div>
+        <div class="episodeLabel" style="text-align: end;" id="prevEpisode"></div>
         {{>partial/button/btn-action id="prev-button" kind="prev"}}
         {{>partial/button/btn-action id="next-button" kind="next"}}
          <div class="episodeLabel" id="nextEpisode"></div>
