--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -123,7 +123,7 @@
     width: 50px;
 }
 
-.btn-search:focus~.input-search {
+.btn-search:hover~.input-search {
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
@@ -131,7 +131,7 @@
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
 
-.input-search:focus {
+.input-search:hover {
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
