--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -8,7 +8,7 @@
         <!-- Колонка ссылок {Только у подборок} -->
         {{#if feedPage}}
         <div class="header-content__links">
-            <a href="/feed" spa-link>Начало</a>
+            <a href="/feed" spa-link>Фильмы</a>
             <a href="/serials" spa-link>Сериалы</a>
             <a href="/list" spa-link>Избранное</a>
         </div>
