Исправил дизайн преаьюшек, убрал обрезку видео, мерзкую грязно серую панель, починил боковой скролл, вернул карусельки, добавил метод очистки подписок, чтобы сбрасывать накопление колбеков

--- a/src/pages/cast/cast.hbs
+++ b/src/pages/cast/cast.hbs
@@ -1,6 +1,9 @@
 {{> partial/header/partial-header feedPage=true kind="feed-page"}}
 
 <div class="glow-title">{{name}}</div>
-<div id="cast-page"></div>
-
+<div class="genre-container">
+    {{#each content}}
+    {{> partial/preview-card baseUrl="movies" this=content}}
+    {{/each}}
+</div>
 {{> partial/footer/partial-footer}}
