--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -4,19 +4,7 @@
 <div class="feed-collection__carousel" id="{{carousel}}">
     <div class="feed-collection__container" id="{{container}}">
         {{#each content}}
-        <div class="feed-collection__container-card" title="{{this.name}}">
-            <video height="400" width="350" class="feed-collection__container-card__video" playsinline muted
-                preload="none" poster="{{this.previewPath}}">
-                <source src="{{this.previewVideoPath}}" type='video/mp4'>
-            </video>
-            <div class="feed-collection__advanced-info">
-                <a href="/movies/{{this.id}}" class="feed-collection__advanced-info__link" spa-link>
-                    <div class="feed-collection__advanced-info__name">{{this.name}}</div>
-                </a>
-                <div class="feed-collection__advanced-info__rating" data-rating="{{this.rating}}">{{this.rating}}
-                </div>
-            </div>
-        </div>
+        {{> partial/preview-card baseUrl="movies" this=this}}
         {{/each}}
     </div>
 </div>
