--- a/src/pages/feed/components/feed-preview.css
+++ b/src/pages/feed/components/feed-preview.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
-    margin-top: auto;
+    margin: 10px;
 }
 
 .feed-page__preview-container {
