--- a/src/pages/like/like-item.hbs
+++ b/src/pages/like/like-item.hbs
@@ -1,5 +1,5 @@
 <div class="feed-collection__container-card" title="{{this.name}}">
-    <video height="400" width="350" class="feed-collection__container-card__video" playsinline muted preload="none"
+    <video height="400" class="feed-collection__container-card__video" playsinline muted preload="none"
         poster="{{this.previewPath}}">
         <source src="{{this.previewVideoPath}}" type='video/mp4'>
     </video>
