--- a/src/partial/footer/partial-footer.css
+++ b/src/partial/footer/partial-footer.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-top: 3rem;
+    max-width: 100%;
     padding-bottom: 3rem;
     margin-top: 0;
     margin-right: -0.75rem;
