--- a/src/static/assets/dropdown.css
+++ b/src/static/assets/dropdown.css
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: center;
     padding: 0 0 0 10px;
+    height: 50px;
     text-decoration: none;
     line-height: 40px;
     font-size: 13px;
