--- a/src/pages/register/components/start-register-form.hbs
+++ b/src/pages/register/components/start-register-form.hbs
@@ -1,5 +1,5 @@
-<div class="start-register__form">
-    <div class="start-register__form-logo-container">
+<div class="login-page__login-content">
+    <div class="login-page__form">
         <span class="start-register__form-logo"></span>
     </div>
     <div>
