--- a/src/pages/register/start-register.hbs
+++ b/src/pages/register/start-register.hbs
@@ -1,6 +1,6 @@
-<div class="main-register-page">
+<div class="login-page">
   <div class="login-page__login-background" style="background-image: url('/img/main.jpg');"></div>
-  <div class="main-register-page__container">
+  <div  class="login-page__container">
     {{> partial/header/partial-header kind="main-page" mainPage=true}}
 
     {{> components/start-register-form }}
