--- a/src/pages/login/components/login-background.css
+++ b/src/pages/login/components/login-background.css
@@ -3,11 +3,21 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: calc(100vh - 200px);
-    transform: scale(1.25) translateY(-42px);
+    min-height: calc(100vh);
+    transform: scale(1.5) translateY(-42px);
     opacity: 0.5;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
+}
+
+@media screen and (max-width: 900px) {
+    .login-page__login-background {
+        transform: none;
+    }
+
+    .register-form {
+        transform: scale(.7);
+    }
 }
