--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -5,6 +5,17 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 900px) {
+    .login-page {
+        overflow: AUTO;
+    }
+
+    .main-register-page{
+        overflow: auto;
+    }
 }
 
 .login-page__container {
