--- a/src/pages/register/components/start-register-form.css
+++ b/src/pages/register/components/start-register-form.css
@@ -12,6 +12,24 @@
     padding: 3rem;
 }
 
+@media screen and (min-width: 1980px) {
+    .start-register__form, .register-form {
+       transform: scale(1.5);
+    }
+}
+
+@media screen and (min-width: 2560px) {
+    .start-register__form, .register-form {
+       transform: scale(2);
+    }
+}
+
+@media screen and (min-width: 3440px) {
+    .start-register__form, .register-form {
+       transform: scale(3);
+    }
+}
+
 .start-register__form-logo-container {
     display: inline-block;
 }
