--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -13,8 +13,12 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
 }
 .main-register-page__container {
-    position: absolute;
     width: 100vw;
+    height: 100vh;
+    position: absolute;
+    flex-direction: column;
+    display: flex;
 }
